# docker

./: .gitignore  Dockerfile  build.sh
ansible/: Dockerfile  ansible  ansible-galaxy  ansible-playbook  ansible-vault  ansible_version  build.sh  docker_ansible  version
ansible210/: Dockerfile  ansible-playbook  molecule  pyproject.toml  version
ansible210/.devcontainer/: devcontainer.json
ansible28/: Dockerfile  ansible  ansible-galaxy  ansible-playbook  ansible-vault  molecule  version
ansible28-ubuntu/: Dockerfile  ansible  entrypoint  version
asciidoctor/: Dockerfile  asciidoctor  build.sh  version
awless/: Dockerfile  version
awscli/: Dockerfile  aws  awscli_version  build.sh  version
base/: Dockerfile  build.sh  version
bundle/: Dockerfile  build.sh  version
code/: Dockerfile  version
consul/: Dockerfile  consul  version
cs_workplace/: Dockerfile  build.sh  run_docker.sh
diagrams/: Dockerfile  diagrams  version
go/: Dockerfile  build.sh  go  go_version
google-chrome/: Dockerfile  build.sh  version
helm/: Dockerfile  helm  version
helm3/: Dockerfile  build.sh  helm  version
jira/: .gitignore  Dockerfile  README.md  build.sh  entrypoint.sh  jira  version
k8s/: Dockerfile
kops/: Dockerfile  build.sh  kops  version
kubectl/: Dockerfile  build.sh  kubectl  version
node12/: Dockerfile
packer/: Dockerfile  Dockerfile-1.2.4  build.sh  packer  packer_version  version
pandoc/: k8-requirements.md  k8s-requirements.adoc  pandoc  version
python/: Dockerfile  build.sh
run-app-in-docker-template/: Dockerfile  app_run.sh  version
(+37 files in other folders)
