[tool.poetry]
name = "ansible210"
version = "0.1.0"
description = "Ansible210 dependencies"
authors = ["Raul Chen <rchen@creditsense.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
jmespath = "^0.10.0"
ansible = "^2.10.7"
cryptography = "^3.3.2"
molecule = "^3.2.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"